Fix gap in content box below navbar

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
     background-color: #1F2937;
     color: #ffffff;
     padding: 50px 100px;
-    justify-content: space-between;
+    gap: 30px;
 }
 
 .img {
